--- a/app/build.gradle
+++ b/app/build.gradle
@@ -74,9 +74,10 @@ dependencies {
     // Retrofit
     implementation "com.squareup.retrofit2:retrofit:2.6.2"
     implementation "com.squareup.retrofit2:converter-gson:2.6.2"
-    implementation "com.squareup.okhttp3:logging-interceptor:4.2.2"
+    implementation "com.squareup.okhttp3:logging-interceptor:4.8.0"
 
     // Testing
     testImplementation "org.jetbrains.kotlinx:kotlinx-coroutines-test:1.3.3"
     testImplementation "junit:junit:4.13"
+    testImplementation("com.squareup.okhttp3:mockwebserver:4.8.0")
 }
